--- a/dev-perl/Catalyst-Plugin-Unicode-Encoding/ChangeLog
+++ b/dev-perl/Catalyst-Plugin-Unicode-Encoding/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*Catalyst-Plugin-Unicode-Encoding-0.3 (11 Jul 2009)
+
+  11 Jul 2009; Daniel Westermann-Clark <dwc@pobox.com>
+  +Catalyst-Plugin-Unicode-Encoding-0.3.ebuild:
+  Add Catalyst::Plugin::Unicode::Encoding 0.3 for Catalyst 5.80000
+
 *Catalyst-Plugin-Unicode-Encoding-0.2 (11 Jul 2009)
 
   11 Jul 2009; Daniel Westermann-Clark <dwc@pobox.com>
