--- a/dev-perl/Parse-CPAN-Packages/ChangeLog
+++ b/dev-perl/Parse-CPAN-Packages/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*Parse-CPAN-Packages-2.31-r1 (20 Jul 2009)
+
+  20 Jul 2009; Daniel Westermann-Clark <dwc@pobox.com>
+  -Parse-CPAN-Packages-2.31.ebuild, +Parse-CPAN-Packages-2.31-r1.ebuild:
+  IO-Compress replaces Compress-Zlib
+
 *Parse-CPAN-Packages-2.31 (09 Jul 2009)
 
   09 Jul 2009; Daniel Westermann-Clark <dwc@pobox.com>
