--- a/dev-perl/Filter-Template/ChangeLog
+++ b/dev-perl/Filter-Template/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*Filter-Template-1.03 (13 Aug 2009)
+
+  13 Aug 2009; Daniel Westermann-Clark <dwc@pobox.com>
+  +Filter-Template-1.03.ebuild:
+  Bump
+
   07 Jul 2009; Daniel Westermann-Clark <dwc@pobox.com>
   Filter-Template-1.02.ebuild, +metadata.xml:
   Convert to EAPI=2 and add metadata.xml
