--- a/dev-perl/HTML-Template-Pro/ChangeLog
+++ b/dev-perl/HTML-Template-Pro/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*HTML-Template-Pro-0.85 (13 Aug 2009)
+
+  13 Aug 2009; Daniel Westermann-Clark <dwc@pobox.com>
+  +HTML-Template-Pro-0.85.ebuild:
+  Bump HTML-Template-Pro to 0.85
+
 *HTML-Template-Pro-0.75 (07 Jul 2009)
 
   07 Jul 2009; Daniel Westermann-Clark <dwc@pobox.com>
