--- a/dev-perl/WWW-Robot/ChangeLog
+++ b/dev-perl/WWW-Robot/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*WWW-Robot-0.026 (13 Aug 2009)
+
+  13 Aug 2009; Daniel Westermann-Clark <dwc@pobox.com>
+  -WWW-Robot-0.025.ebuild, +WWW-Robot-0.026.ebuild:
+  Bump WWW-Robot to 0.26; old version removed from CPAN
+
   09 Jul 2009; Daniel Westermann-Clark <dwc@pobox.com>
   WWW-Robot-0.025.ebuild, +metadata.xml:
   Convert to EAPI=2 and add metadata.xml
