--- a/dev-perl/App-Cmd/ChangeLog
+++ b/dev-perl/App-Cmd/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*App-Cmd-0.206 (23 Aug 2009)
+
+  23 Aug 2009; Daniel Westermann-Clark <dwc@pobox.com>
+  +App-Cmd-0.206.ebuild:
+  Bump App-Cmd to 0.206
+
 *App-Cmd-0.204 (07 Jul 2009)
 
   07 Jul 2009; Daniel Westermann-Clark <dwc@pobox.com>
