--- a/dev-perl/File-Rsync/ChangeLog
+++ b/dev-perl/File-Rsync/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*File-Rsync-0.43 (23 Aug 2009)
+
+  23 Aug 2009; Daniel Westermann-Clark <dwc@pobox.com>
+  +File-Rsync-0.43.ebuild:
+  Bump File-Rsync to 0.43
+
   09 Jul 2009; Daniel Westermann-Clark <dwc@pobox.com>
   File-Rsync-0.42.ebuild, +metadata.xml:
   Convert to EAPI=2 and add metadata.xml
