--- a/dev-perl/Text-Diff-Parser/ChangeLog
+++ b/dev-perl/Text-Diff-Parser/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*Text-Diff-Parser-0.1001 (11 Sep 2009)
+
+  11 Sep 2009; Daniel Westermann-Clark <dwc@pobox.com>
+  +Text-Diff-Parser-0.1001.ebuild:
+  Bump Text-Diff-Parser to 0.1001
+
 *Text-Diff-Parser-0.0900 (09 Jul 2009)
 
   09 Jul 2009; Daniel Westermann-Clark <dwc@pobox.com>
