--- a/dev-perl/MooseX-App-Cmd/ChangeLog
+++ b/dev-perl/MooseX-App-Cmd/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*MooseX-App-Cmd-0.06 (20 Sep 2009)
+
+  20 Sep 2009; Daniel Westermann-Clark <dwc@pobox.com>
+  +MooseX-App-Cmd-0.06.ebuild:
+  Bump MooseX-App-Cmd to 0.06
+
 *MooseX-App-Cmd-0.05 (07 Jul 2009)
 
   07 Jul 2009; Daniel Westermann-Clark <dwc@pobox.com>
