--- a/dev-perl/Devel-Events/ChangeLog
+++ b/dev-perl/Devel-Events/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*Devel-Events-0.07 (23 Sep 2009)
+
+  23 Sep 2009; Daniel Westermann-Clark <dwc@pobox.com>
+  +Devel-Events-0.07.ebuild:
+  Bump Devel-Events to 0.07
+
   11 Jul 2009; Daniel Westermann-Clark <dwc@pobox.com>
   Devel-Events-0.06.ebuild, +metadata.xml:
   Convert to EAPI=2 and add metadata.xml
