--- a/dev-perl/Devel-Events/ChangeLog
+++ b/dev-perl/Devel-Events/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*Devel-Events-0.08 (14 Oct 2009)
+
+  14 Oct 2009; Daniel Westermann-Clark <dwc@pobox.com>
+  -Devel-Events-0.07.ebuild, +Devel-Events-0.08.ebuild:
+  Bump Devel-Events to 0.08
+
 *Devel-Events-0.07 (23 Sep 2009)
 
   23 Sep 2009; Daniel Westermann-Clark <dwc@pobox.com>
