--- a/dev-perl/Catalyst-Plugin-Session-Store-DBI/ChangeLog
+++ b/dev-perl/Catalyst-Plugin-Session-Store-DBI/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*Catalyst-Plugin-Session-Store-DBI-0.15 (01 Nov 2009)
+
+  01 Nov 2009; Daniel Westermann-Clark <dwc@pobox.com>
+  +Catalyst-Plugin-Session-Store-DBI-0.15.ebuild:
+  Bump Catalyst-Plugin-Session-Store-DBI to 0.15
+
   10 Jul 2009; Daniel Westermann-Clark <dwc@pobox.com>
   Catalyst-Plugin-Session-Store-DBI-0.13.ebuild, +metadata.xml:
   Convert to EAPI=2 and add metadata.xml
