--- a/dev-perl/Devel-Leak-Object/ChangeLog
+++ b/dev-perl/Devel-Leak-Object/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*Devel-Leak-Object-1.00 (01 Nov 2009)
+
+  01 Nov 2009; Daniel Westermann-Clark <dwc@pobox.com>
+  +Devel-Leak-Object-1.00.ebuild:
+  Bump Devel-Leak-Object to 1.00
+
   08 Jul 2009; Daniel Westermann-Clark <dwc@pobox.com>
   Devel-Leak-Object-0.92.ebuild, +metadata.xml:
   Convert to EAPI=2 and add metadata.xml
