--- a/dev-perl/Template-Declare/ChangeLog
+++ b/dev-perl/Template-Declare/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*Template-Declare-0.43 (19 Nov 2009)
+
+  19 Nov 2009; Daniel Westermann-Clark <dwc@pobox.com>
+  -Template-Declare-0.42.ebuild, +Template-Declare-0.43.ebuild:
+  Bump Template-Declare to 0.43
+
 *Template-Declare-0.42 (01 Nov 2009)
 
   01 Nov 2009; Daniel Westermann-Clark <dwc@pobox.com>
