--- a/dev-perl/Text-vCard/ChangeLog
+++ b/dev-perl/Text-vCard/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Text-vCard
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*Text-vCard-2.04 (05 Jan 2010)
+
+  05 Jan 2010; Daniel Westermann-Clark <dwc@pobox.com>
+  -Text-vCard-2.03.ebuild, +Text-vCard-2.04.ebuild:
+  Bump Text-vCard to 2.04
 
   11 Jul 2009; Daniel Westermann-Clark <dwc@pobox.com>
   Text-vCard-2.03.ebuild, +metadata.xml:
