--- a/dev-perl/String-BufferStack/ChangeLog
+++ b/dev-perl/String-BufferStack/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/String-BufferStack
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*String-BufferStack-1.15 (14 Jan 2010)
+
+  14 Jan 2010; Daniel Westermann-Clark <dwc@pobox.com>
+  +String-BufferStack-1.15.ebuild:
+  Bump String-BufferStack to 1.15
 
 *String-BufferStack-1.14 (11 Jul 2009)
 
