--- a/dev-perl/SVN-Notify/ChangeLog
+++ b/dev-perl/SVN-Notify/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/SVN-Notify
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*SVN-Notify-2.80 (03 Feb 2010)
+
+  03 Feb 2010; Daniel Westermann-Clark <dwc@pobox.com>
+  -SVN-Notify-2.79.ebuild, +SVN-Notify-2.80.ebuild:
+  Bump dev-perl/SVN-Notify to 2.80
 
 *SVN-Notify-2.79 (09 Jul 2009)
 
