--- a/dev-perl/Text-vCard/ChangeLog
+++ b/dev-perl/Text-vCard/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*Text-vCard-2.07 (03 Feb 2010)
+
+  03 Feb 2010; Daniel Westermann-Clark <dwc@pobox.com>
+  -Text-vCard-2.05.ebuild, +Text-vCard-2.07.ebuild:
+  Bump dev-perl/Text-vCard to 2.07
+
 *Text-vCard-2.05 (14 Jan 2010)
 
   14 Jan 2010; Daniel Westermann-Clark <dwc@pobox.com>
