--- a/dev-perl/VCI/ChangeLog
+++ b/dev-perl/VCI/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/VCI
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*VCI-0.5.3 (19 Feb 2010)
+
+  19 Feb 2010; Daniel Westermann-Clark <dwc@pobox.com> -VCI-0.5.2.ebuild,
+  +VCI-0.5.3.ebuild:
+  Bump dev-perl/VCI to 0.5.3
 
   09 Jul 2009; Daniel Westermann-Clark <dwc@pobox.com> VCI-0.5.2.ebuild,
   +metadata.xml:
