--- a/dev-perl/Catalyst-Plugin-FormValidator/ChangeLog
+++ b/dev-perl/Catalyst-Plugin-FormValidator/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*Catalyst-Plugin-FormValidator-0.09.2 (25 Feb 2010)
+
+  25 Feb 2010; Daniel Westermann-Clark <dwc@pobox.com>
+  +Catalyst-Plugin-FormValidator-0.09.2.ebuild:
+  Add dev-perl/Catalyst-Plugin-FormValidator 0.09.2
+
 *Catalyst-Plugin-FormValidator-0.03 (14 Jan 2010)
 
   14 Jan 2010; Daniel Westermann-Clark <dwc@pobox.com>
