--- a/dev-perl/VCI/ChangeLog
+++ b/dev-perl/VCI/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Mar 2010; Daniel Westermann-Clark <dwc@pobox.com> VCI-0.5.3.ebuild:
+  Update RDEPEND for bzr and mercurial package moves and remove a
+  built_with_use
+
 *VCI-0.5.3 (19 Feb 2010)
 
   19 Feb 2010; Daniel Westermann-Clark <dwc@pobox.com> -VCI-0.5.2.ebuild,
