--- a/dev-perl/Catalyst-Plugin-FormValidator/ChangeLog
+++ b/dev-perl/Catalyst-Plugin-FormValidator/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*Catalyst-Plugin-FormValidator-0.09.4 (16 Mar 2010)
+
+  16 Mar 2010; Daniel Westermann-Clark <dwc@pobox.com>
+  -Catalyst-Plugin-FormValidator-0.09.2.ebuild,
+  +Catalyst-Plugin-FormValidator-0.09.4.ebuild:
+  Bump dev-perl/Catalyst-Plugin-FormValidator to 0.094
+
 *Catalyst-Plugin-FormValidator-0.09.2 (25 Feb 2010)
 
   25 Feb 2010; Daniel Westermann-Clark <dwc@pobox.com>
