--- a/dev-perl/Catalyst-Plugin-Session-Store-DBI/ChangeLog
+++ b/dev-perl/Catalyst-Plugin-Session-Store-DBI/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for dev-perl/Catalyst-Plugin-Session-Store-DBI
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*Catalyst-Plugin-Session-Store-DBI-0.16 (04 Apr 2010)
+
+  04 Apr 2010; Daniel Westermann-Clark <dwc@pobox.com>
+  -Catalyst-Plugin-Session-Store-DBI-0.13.ebuild,
+  -Catalyst-Plugin-Session-Store-DBI-0.15.ebuild,
+  +Catalyst-Plugin-Session-Store-DBI-0.16.ebuild:
+  Bump dev-perl/Catalyst-Plugin-Session-Store-DBI to 0.16
 
 *Catalyst-Plugin-Session-Store-DBI-0.15 (01 Nov 2009)
 
