--- a/dev-perl/Net-OSCAR/ChangeLog
+++ b/dev-perl/Net-OSCAR/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Net-OSCAR
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*Net-OSCAR-1.926 (04 Apr 2010)
+
+  04 Apr 2010; Daniel Westermann-Clark <dwc@pobox.com>
+  -Net-OSCAR-1.925.ebuild, +Net-OSCAR-1.926.ebuild:
+  Bump dev-perl/Net-OSCAR to 1.926
 
   08 Jul 2009; Daniel Westermann-Clark <dwc@pobox.com>
   Net-OSCAR-1.925.ebuild, +metadata.xml:
