--- a/dev-perl/POE-Component-SSLify/ChangeLog
+++ b/dev-perl/POE-Component-SSLify/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/POE-Component-SSLify
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*POE-Component-SSLify-0.18 (04 Apr 2010)
+
+  04 Apr 2010; Daniel Westermann-Clark <dwc@pobox.com>
+  -POE-Component-SSLify-0.15.ebuild, +POE-Component-SSLify-0.18.ebuild:
+  Bump dev-perl/POE-Component-SSLify to 0.18
 
 *POE-Component-SSLify-0.15 (08 Jul 2009)
 
