--- a/dev-perl/Data-Throttler/ChangeLog
+++ b/dev-perl/Data-Throttler/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Apr 2010; Daniel Westermann-Clark <dwc@pobox.com>
+  Data-Throttler-0.03.ebuild:
+  Remove unnecessary IUSE=test
+
 *Data-Throttler-0.03 (27 Feb 2010)
 
   27 Feb 2010; Daniel Westermann-Clark <dwc@pobox.com>
