--- a/dev-perl/VCI/ChangeLog
+++ b/dev-perl/VCI/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 May 2010; Daniel Westermann-Clark <dwc@pobox.com> VCI-0.5.3.ebuild:
+  Update dev-perl/VCI for git package move
+
   07 Mar 2010; Daniel Westermann-Clark <dwc@pobox.com> VCI-0.5.3.ebuild:
   Update RDEPEND for bzr and mercurial package moves and remove a
   built_with_use
