--- a/dev-perl/POE-Component-SSLify/ChangeLog
+++ b/dev-perl/POE-Component-SSLify/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*POE-Component-SSLify-0.20 (04 May 2010)
+
+  04 May 2010; Daniel Westermann-Clark <dwc@pobox.com>
+  -POE-Component-SSLify-0.18.ebuild, +POE-Component-SSLify-0.20.ebuild:
+  Bump dev-perl/POE-Component-SSLify to 0.20
+
 *POE-Component-SSLify-0.18 (04 Apr 2010)
 
   04 Apr 2010; Daniel Westermann-Clark <dwc@pobox.com>
