--- a/dev-perl/DBD-CSV/ChangeLog
+++ b/dev-perl/DBD-CSV/ChangeLog
@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*DBD-CSV-0.29 (15 May 2010)
+
+  15 May 2010; Daniel Westermann-Clark <dwc@pobox.com> +DBD-CSV-0.29.ebuild:
+  Bump dev-perl/DBD-CSV to 0.29
+
 *DBD-CSV-0.28 (04 Apr 2010)
 
   04 Apr 2010; Daniel Westermann-Clark <dwc@pobox.com> -DBD-CSV-0.27.ebuild,
