--- a/dev-perl/Catalyst-Plugin-FormValidator-Simple/ChangeLog
+++ b/dev-perl/Catalyst-Plugin-FormValidator-Simple/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*Catalyst-Plugin-FormValidator-Simple-0.14 (22 Jun 2010)
+
+  22 Jun 2010; Daniel Westermann-Clark <dwc@pobox.com>
+  -Catalyst-Plugin-FormValidator-Simple-0.13.ebuild,
+  +Catalyst-Plugin-FormValidator-Simple-0.14.ebuild:
+  Bump dev-perl/Catalyst-Plugin-FormValidator-Simple to 0.14
+
 *Catalyst-Plugin-FormValidator-Simple-0.13 (14 Jan 2010)
 
   14 Jan 2010; Daniel Westermann-Clark <dwc@pobox.com>
