--- a/dev-perl/Devel-Leak-Object/ChangeLog
+++ b/dev-perl/Devel-Leak-Object/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Devel-Leak-Object
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*Devel-Leak-Object-1.01 (22 Jun 2010)
+
+  22 Jun 2010; Daniel Westermann-Clark <dwc@pobox.com>
+  -Devel-Leak-Object-1.00.ebuild, +Devel-Leak-Object-1.01.ebuild:
+  Bump dev-perl/Devel-Leak-Object to 1.01
 
 *Devel-Leak-Object-1.00 (01 Nov 2009)
 
