--- a/dev-perl/XML-RSS-LibXML/ChangeLog
+++ b/dev-perl/XML-RSS-LibXML/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/XML-RSS-LibXML
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*XML-RSS-LibXML-0.31.00 (22 Jun 2010)
+
+  22 Jun 2010; Daniel Westermann-Clark <dwc@pobox.com>
+  +XML-RSS-LibXML-0.31.00.ebuild:
+  Add dev-perl/XML-RSS-LibXML 0.3100
 
   09 Jul 2009; Daniel Westermann-Clark <dwc@pobox.com>
   XML-RSS-LibXML-0.30.04.ebuild, +metadata.xml:
