--- a/dev-perl/SVN-Notify/ChangeLog
+++ b/dev-perl/SVN-Notify/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 Jun 2010; Daniel Westermann-Clark <dwc@pobox.com>
+  SVN-Notify-2.80.ebuild:
+  Update dev-perl/SVN-Notify for subversion package move
+
 *SVN-Notify-2.80 (03 Feb 2010)
 
   03 Feb 2010; Daniel Westermann-Clark <dwc@pobox.com>
