--- a/dev-perl/Catalyst-Plugin-FormValidator-Simple/ChangeLog
+++ b/dev-perl/Catalyst-Plugin-FormValidator-Simple/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*Catalyst-Plugin-FormValidator-Simple-0.15 (15 Jul 2010)
+
+  15 Jul 2010; Daniel Westermann-Clark <dwc@pobox.com>
+  -Catalyst-Plugin-FormValidator-Simple-0.14.ebuild,
+  +Catalyst-Plugin-FormValidator-Simple-0.15.ebuild:
+  Bump dev-perl/Catalyst-Plugin-FormValidator-Simple to 0.15
+
 *Catalyst-Plugin-FormValidator-Simple-0.14 (22 Jun 2010)
 
   22 Jun 2010; Daniel Westermann-Clark <dwc@pobox.com>
