--- a/dev-perl/Data-Throttler/ChangeLog
+++ b/dev-perl/Data-Throttler/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*Data-Throttler-0.05 (15 Jul 2010)
+
+  15 Jul 2010; Daniel Westermann-Clark <dwc@pobox.com>
+  -Data-Throttler-0.04.ebuild, +Data-Throttler-0.05.ebuild:
+  Bump dev-perl/Data-Throttler to 0.05
+
 *Data-Throttler-0.04 (04 May 2010)
 
   04 May 2010; Daniel Westermann-Clark <dwc@pobox.com>
