--- a/dev-perl/Net-Google-DataAPI/ChangeLog
+++ b/dev-perl/Net-Google-DataAPI/ChangeLog
@@ -2,6 +2,16 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Aug 2010; Daniel Westermann-Clark <dwc@pobox.com>
+  -Net-Google-DataAPI-0.19.ebuild, +Net-Google-DataAPI-0.20.ebuild:
+  Bump dev-perl/Net-Google-DataAPI to 0.20
+
+*Net-Google-DataAPI-0.20 (10 Aug 2010)
+
+  10 Aug 2010; Daniel Westermann-Clark <dwc@pobox.com>
+  -Net-Google-DataAPI-0.19.ebuild, +Net-Google-DataAPI-0.20.ebuild:
+  Bump dev-perl/Net-Google-DataAPI
+
 *Net-Google-DataAPI-0.19 (09 Aug 2010)
 
   09 Aug 2010; Daniel Westermann-Clark <dwc@pobox.com>
