--- a/dev-perl/Net-Google-Spreadsheets/ChangeLog
+++ b/dev-perl/Net-Google-Spreadsheets/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*Net-Google-Spreadsheets-0.13 (10 Aug 2010)
+
+  10 Aug 2010; Daniel Westermann-Clark <dwc@pobox.com>
+  -Net-Google-Spreadsheets-0.12.ebuild,
+  +Net-Google-Spreadsheets-0.13.ebuild:
+  Bump dev-perl/Net-Google-Spreadsheets to 0.13
+
 *Net-Google-Spreadsheets-0.12 (09 Aug 2010)
 
   09 Aug 2010; Daniel Westermann-Clark <dwc@pobox.com>
