--- a/dev-perl/Filter-Simple/ChangeLog
+++ b/dev-perl/Filter-Simple/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Filter-Simple
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*Filter-Simple-0.85 (16 Sep 2010)
+
+  16 Sep 2010; Daniel Westermann-Clark <dwc@pobox.com>
+  +Filter-Simple-0.85.ebuild:
+  Bump dev-perl/Filter-Simple to 0.85
 
   07 Jul 2009; Daniel Westermann-Clark <dwc@pobox.com>
   Filter-Simple-0.84.ebuild, +metadata.xml:
