--- a/dev-perl/Net-Google-DataAPI/ChangeLog
+++ b/dev-perl/Net-Google-DataAPI/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*Net-Google-DataAPI-0.22 (16 Sep 2010)
+
+  16 Sep 2010; Daniel Westermann-Clark <dwc@pobox.com>
+  -Net-Google-DataAPI-0.20.ebuild, +Net-Google-DataAPI-0.22.ebuild:
+  Bump dev-perl/Net-Google-DataAPI to 0.22
+
   10 Aug 2010; Daniel Westermann-Clark <dwc@pobox.com>
   -Net-Google-DataAPI-0.19.ebuild, +Net-Google-DataAPI-0.20.ebuild:
   Bump dev-perl/Net-Google-DataAPI to 0.20
