--- a/dev-perl/VCI/ChangeLog
+++ b/dev-perl/VCI/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*VCI-0.5.4 (17 Sep 2010)
+
+  17 Sep 2010; Daniel Westermann-Clark <dwc@pobox.com> -VCI-0.5.3.ebuild,
+  +VCI-0.5.4.ebuild, +files/vci-cvs-timezone-0.5.4.patch:
+  Bump dev-perl/VCI to 0.5.4, with patch for RT #61430
+
   23 Jun 2010; Daniel Westermann-Clark <dwc@pobox.com> VCI-0.5.3.ebuild:
   Update dev-perl/VCI for subversion package move (finally)
 
