--- a/dev-perl/VCI/ChangeLog
+++ b/dev-perl/VCI/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*VCI-0.6.2 (17 Sep 2010)
+
+  17 Sep 2010; Daniel Westermann-Clark <dwc@pobox.com> +VCI-0.6.2.ebuild,
+  +files/vci-cvs-timezone-0.6.2.patch:
+  Bump dev-perl/VCI to 0.6.2
+
 *VCI-0.5.4 (17 Sep 2010)
 
   17 Sep 2010; Daniel Westermann-Clark <dwc@pobox.com> -VCI-0.5.3.ebuild,
