--- a/dev-perl/DBD-CSV/ChangeLog
+++ b/dev-perl/DBD-CSV/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*DBD-CSV-0.31 (29 Oct 2010)
+
+  29 Oct 2010; Daniel Westermann-Clark <dwc@pobox.com> -DBD-CSV-0.28.ebuild,
+  -DBD-CSV-0.29.ebuild, +DBD-CSV-0.31.ebuild:
+  Bump dev-perl/DBD-CSV to 0.31 and remove versions no longer on CPAN
+
 *DBD-CSV-0.30 (15 Jul 2010)
 
   15 Jul 2010; Daniel Westermann-Clark <dwc@pobox.com> +DBD-CSV-0.30.ebuild:
