--- a/dev-perl/Net-OSCAR/ChangeLog
+++ b/dev-perl/Net-OSCAR/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*Net-OSCAR-1.928 (29 Oct 2010)
+
+  29 Oct 2010; Daniel Westermann-Clark <dwc@pobox.com>
+  -Net-OSCAR-1.926.ebuild, +Net-OSCAR-1.928.ebuild:
+  Bump dev-perl/Net-OSCAR to 1.928
+
 *Net-OSCAR-1.926 (04 Apr 2010)
 
   04 Apr 2010; Daniel Westermann-Clark <dwc@pobox.com>
