--- a/dev-perl/POE-Filter-XML/ChangeLog
+++ b/dev-perl/POE-Filter-XML/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/POE-Filter-XML
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*POE-Filter-XML-1.102960 (29 Oct 2010)
+
+  29 Oct 2010; Daniel Westermann-Clark <dwc@pobox.com>
+  -POE-Filter-XML-0.38.ebuild, +POE-Filter-XML-1.102960.ebuild:
+  Bump dev-perl/POE-Filter-XML to 1.102960
 
 *POE-Filter-XML-0.38 (08 Jul 2009)
 
