--- a/dev-perl/Net-Google-DataAPI/ChangeLog
+++ b/dev-perl/Net-Google-DataAPI/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*Net-Google-DataAPI-0.23 (21 Dec 2010)
+
+  21 Dec 2010; Daniel Westermann-Clark <dwc@pobox.com>
+  +Net-Google-DataAPI-0.23.ebuild:
+  Bump dev-perl/Net-Google-DataAPI to 0.23
+
 *Net-Google-DataAPI-0.22 (16 Sep 2010)
 
   16 Sep 2010; Daniel Westermann-Clark <dwc@pobox.com>
