--- a/dev-perl/VCI/ChangeLog
+++ b/dev-perl/VCI/ChangeLog
@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*VCI-0.7.1 (21 Dec 2010)
+
+  21 Dec 2010; Daniel Westermann-Clark <dwc@pobox.com> +VCI-0.7.1.ebuild:
+  Bump dev-perl/VCI to 0.7.1
+
 *VCI-0.6.3 (29 Oct 2010)
 
   29 Oct 2010; Daniel Westermann-Clark <dwc@pobox.com> -VCI-0.6.2.ebuild,
