--- a/dev-perl/POE-Component-SSLify/ChangeLog
+++ b/dev-perl/POE-Component-SSLify/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/POE-Component-SSLify
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*POE-Component-SSLify-1.6.0 (29 Apr 2011)
+
+  29 Apr 2011; Daniel Westermann-Clark <dwc@pobox.com>
+  -POE-Component-SSLify-0.20.ebuild, +POE-Component-SSLify-1.6.0.ebuild:
+  Bump and migrate to x.y.z
 
 *POE-Component-SSLify-0.20 (04 May 2010)
 
