[newversion] SVN-Notify-2.81
(Portage version: 2.1.9.42/git/Linux x86_64, unsigned Manifest commit)

--- a/dev-perl/SVN-Notify/ChangeLog
+++ b/dev-perl/SVN-Notify/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/SVN-Notify
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*SVN-Notify-2.81 (29 Apr 2011)
+
+  29 Apr 2011; Daniel Westermann-Clark <dwc@pobox.com>
+  -SVN-Notify-2.80.ebuild, +SVN-Notify-2.81.ebuild:
+  Bump
 
   23 Jun 2010; Daniel Westermann-Clark <dwc@pobox.com>
   SVN-Notify-2.80.ebuild:
