--- a/dev-perl/XML-XSPF/ChangeLog
+++ b/dev-perl/XML-XSPF/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/XML-XSPF
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*XML-XSPF-0.7.1 (29 Apr 2011)
+
+  29 Apr 2011; Daniel Westermann-Clark <dwc@pobox.com> -XML-XSPF-0.7.ebuild,
+  +XML-XSPF-0.7.1.ebuild:
+  Bump
 
   09 Jul 2009; Daniel Westermann-Clark <dwc@pobox.com> XML-XSPF-0.7.ebuild,
   +metadata.xml:
