[newversion] Catalyst-Plugin-AutoRestart-0.94
(Portage version: 2.1.10.3/git/Linux x86_64, unsigned Manifest commit)

--- a/dev-perl/Catalyst-Plugin-AutoRestart/ChangeLog
+++ b/dev-perl/Catalyst-Plugin-AutoRestart/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*Catalyst-Plugin-AutoRestart-0.94 (07 Aug 2011)
+
+  07 Aug 2011; Daniel Westermann-Clark <dwc@pobox.com>
+  -Catalyst-Plugin-AutoRestart-0.93.ebuild,
+  +Catalyst-Plugin-AutoRestart-0.94.ebuild:
+  Bump
+
   19 Jan 2011; Daniel Westermann-Clark <dwc@pobox.com>
   Catalyst-Plugin-AutoRestart-0.93.ebuild:
   Fix dev-perl/Catalyst-Runtime version due to
