--- a/dev-perl/DBD-CSV/ChangeLog
+++ b/dev-perl/DBD-CSV/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/DBD-CSV
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*DBD-CSV-0.33 (13 Feb 2012)
+
+  13 Feb 2012; Daniel Westermann-Clark <dwc@pobox.com> -DBD-CSV-0.31.ebuild,
+  +DBD-CSV-0.33.ebuild:
+  Bump dev-perl/DBD-CSV to 0.33
 
 *DBD-CSV-0.31 (29 Oct 2010)
 
