--- a/dev-perl/HTML-Lint/ChangeLog
+++ b/dev-perl/HTML-Lint/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/HTML-Lint
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*HTML-Lint-2.10 (13 Feb 2012)
+
+  13 Feb 2012; Daniel Westermann-Clark <dwc@pobox.com> -HTML-Lint-2.06.ebuild,
+  +HTML-Lint-2.10.ebuild:
+  Bump dev-perl/HTML-Lint to 2.10
 
   11 Jul 2009; Daniel Westermann-Clark <dwc@pobox.com>
   HTML-Lint-2.06.ebuild, +metadata.xml:
