--- a/dev-perl/Lingua-EN-Numbers/ChangeLog
+++ b/dev-perl/Lingua-EN-Numbers/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Lingua-EN-Numbers
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*Lingua-EN-Numbers-1.03 (13 Feb 2012)
+
+  13 Feb 2012; Daniel Westermann-Clark <dwc@pobox.com>
+  -Lingua-EN-Numbers-1.01.ebuild, +Lingua-EN-Numbers-1.03.ebuild:
+  Bump dev-perl/Lingua-EN-Numbers to 1.03
 
   09 Jul 2009; Daniel Westermann-Clark <dwc@pobox.com>
   Lingua-EN-Numbers-1.01.ebuild, +metadata.xml:
