--- a/dev-perl/Net-Google-DataAPI/ChangeLog
+++ b/dev-perl/Net-Google-DataAPI/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Net-Google-DataAPI
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*Net-Google-DataAPI-0.25 (13 Feb 2012)
+
+  13 Feb 2012; Daniel Westermann-Clark <dwc@pobox.com>
+  -Net-Google-DataAPI-0.24.ebuild, +Net-Google-DataAPI-0.25.ebuild:
+  Bump dev-perl/Net-Google-DataAPI to 0.25
 
 *Net-Google-DataAPI-0.24 (07 Aug 2011)
 
