--- a/dev-perl/SVN-Notify/ChangeLog
+++ b/dev-perl/SVN-Notify/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/SVN-Notify
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*SVN-Notify-2.83 (13 Feb 2012)
+
+  13 Feb 2012; Daniel Westermann-Clark <dwc@pobox.com> -SVN-Notify-2.82.ebuild,
+  +SVN-Notify-2.83.ebuild:
+  Bump dev-perl/SVN-Notify to 2.83
 
 *SVN-Notify-2.82 (07 Aug 2011)
 
