--- a/dev-perl/Template-Plugin-Textile/ChangeLog
+++ b/dev-perl/Template-Plugin-Textile/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Template-Plugin-Textile
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*Template-Plugin-Textile-2.01 (13 Feb 2012)
+
+  13 Feb 2012; Daniel Westermann-Clark <dwc@pobox.com>
+  -Template-Plugin-Textile-1.01.ebuild, +Template-Plugin-Textile-2.01.ebuild:
+  Bump dev-perl/Template-Plugin-Textile to 2.01
 
   11 Jul 2009; Daniel Westermann-Clark <dwc@pobox.com>
   Template-Plugin-Textile-1.01.ebuild, +metadata.xml:
