--- a/dev-perl/XML-RSS-LibXML/ChangeLog
+++ b/dev-perl/XML-RSS-LibXML/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/XML-RSS-LibXML
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*XML-RSS-LibXML-0.31.02 (13 Feb 2012)
+
+  13 Feb 2012; Daniel Westermann-Clark <dwc@pobox.com>
+  -XML-RSS-LibXML-0.31.01.ebuild, +XML-RSS-LibXML-0.31.02.ebuild:
+  Bump dev-perl/XML-RSS-LibXML to 0.3102
 
 *XML-RSS-LibXML-0.31.01 (07 Aug 2011)
 
